--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 22
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.futurice.android.reservator"
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion 22
 
         testApplicationId "com.futurice.android.reservator.test"
         testInstrumentationRunner "android.test.InstrumentationTestRunner"
@@ -18,15 +18,5 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
-    }
-
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        compile 'com.github.paolorotolo:appintro:4.1.0'
-        compile "com.android.support:support-v4:25.3.1"
-        compile "com.android.support:appcompat-v7:25.3.1"
     }
 }
