--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,74 @@
 apply plugin: 'com.android.application'
+apply from: "$project.rootDir/tools/script-lint.gradle"
+apply from: "$project.rootDir/tools/script-findbugs.gradle"
+apply from: "$project.rootDir/tools/script-pmd.gradle"
+
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.futurice.android.reservator"
-        minSdkVersion 16
-        targetSdkVersion 25
+        versionCode 18
+        versionName "5.0.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
 
         testApplicationId "com.futurice.android.reservator.test"
         testInstrumentationRunner "android.test.InstrumentationTestRunner"
     }
 
-    buildTypes {
+    signingConfigs {
         release {
-            minifyEnabled false
+            keyAlias 'reservator'
+            // Create your own gradle.properties file and store the passwords there
+            keyPassword RESERVATOR_KEY_PASSWORD
+            storePassword RESERVATOR_KEYSTORE_PASSWORD
+            storeFile file("../keystore/reservator_release.keystore")
+        }
+
+    }
+
+    productFlavors {
+        dev {
+
+        }
+
+        prod {
+            signingConfig signingConfigs.release
+        }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'LICENSE.txt'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    buildTypes {
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix '-DEBUG'
+
+            debuggable true
+            testCoverageEnabled true
+        }
+        release {
+            applicationIdSuffix '.release'
+            versionNameSuffix '-RELEASE'
+
+            signingConfig signingConfigs.release
+
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -25,8 +78,8 @@ android {
     }
 
     dependencies {
-        compile 'com.github.paolorotolo:appintro:4.1.0'
-        compile "com.android.support:support-v4:25.3.1"
-        compile "com.android.support:appcompat-v7:25.3.1"
+        compile "com.github.paolorotolo:appintro:$rootProject.appintroVersion"
+        compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+        compile "com.android.support:appcompat-v7:$rootProject.appCompatVesion"
     }
 }
