--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     signingConfigs {
         release {
-            keyAlias 'reservator'
+            keyAlias 'futurice'
             // Create your own gradle.properties file and store the passwords there
             keyPassword RESERVATOR_KEY_PASSWORD
             storePassword RESERVATOR_KEYSTORE_PASSWORD
@@ -62,13 +62,12 @@ android {
             testCoverageEnabled true
         }
         release {
-            applicationIdSuffix '.release'
             versionNameSuffix '-RELEASE'
 
             signingConfig signingConfigs.release
 
-            shrinkResources true
-            minifyEnabled true
+            shrinkResources false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
