--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <application
         android:name=".ReservatorApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name">
         <activity
@@ -32,7 +33,7 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:noHistory="true"
-            android:screenOrientation="sensorLandscape"></activity>
+            android:screenOrientation="sensorLandscape" />
         <!-- Hardware acceleration breaks the drawing of the vertices -->
         <activity
             android:name=".RoomActivity"
@@ -46,9 +47,6 @@
             android:name=".LobbyActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="sensorLandscape" />
-        <activity
-            android:name=".view.RoomReservationPopup"
-            android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".WizardActivity"
             android:noHistory="true"
