--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 
     repositories {
         mavenCentral()
+        google()
     }
 
     dependencies {
@@ -69,6 +70,7 @@ android {
         compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
         compile "com.android.support:appcompat-v7:$rootProject.appCompatVesion"
         compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+        implementation "com.android.support.constraint:constraint-layout:1.1.3"
         annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
     }
 }
